wp-content/themes/octiv2016/src/scss/layout/_front-page.scss
.home .fixed-hero-section {
  overflow: hidden;
  position: relative;
  // box-shadow: inset 0 0 35px rgba(black, 0.75);
  padding-bottom: 0;
  .slick-slide {
    background-size: cover;
    color: $gray;
    @include bp(sm) {
      padding-bottom: 8rem;
    }
  }
  .slick-dots {
    padding-left: 0;
    @include bp(sm) {
      margin-top: -9rem;
      padding-bottom: 7rem;
    }
  }
  .slick-slider {
    -webkit-user-select: text;
    -khtml-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
  }
  .slick-list.draggable {
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
}

.home .hero-video {
  // display: none;
  // @include bp(md) {
  //   display: block;
  // }
  position: absolute;
  z-index: 0;
  // background-image: url(../dist/img/home-video-hero.jpg);
  background-size: cover;
  background-position: 100%;
  transform: translateY(-50%);
  top: 50%; left: 0; right: 0;
  width: 100%;
}

.home .video-overlay {
  position: absolute;
  z-index: 10;
  height: 100vh;
  width: 100%;
  top: 0; left: 0; right: 0; bottom: 0;
  background-color: #000;
  opacity: 0.6;
}

.home h1 {
  font-size: 1.4rem;
  line-height: 1.1em;
  margin-bottom: 1rem;
  @include bp(sm) {
    font-size: 2rem;
  }
  @include bp(md) {
    font-size: 2.25rem;
  }
  @include bp(xl) {
    font-size: 2.65rem;
  }
  @include bp(xxl) {
    font-size: 3rem;
  }
}

span.typed {
  font-size: 0.9em;
  line-height: 1.1em;
  font-style: italic;
  color: $brand;
  font-weight: lighter;
}

// .home .fixed-hero-section p {
//   font-size: 1.2em;
//   @include bp(sm) {
//     font-size: 1.4em;
//   }
//   @include bp(md) {
//     font-size: 1.5em;
//     padding-left: 1em;
//     padding-right: 1em;
//   }
//   @include bp(xxl) {
//     font-size: 1.7em;
//     padding-left: 2em;
//     padding-right: 2em;
//   }
// }

.home .brand-video {
  margin-top: -3rem;
  position: relative;
  z-index: 2;
  box-shadow: 0 0 25px rgba(0,0,0,0.1);
  @include bp(md) {
    margin-top: -6rem;
    padding: 3rem;
  }
}

.home .brand-video .two-third-only > div {
  margin-bottom: 0;
}

.home .brand-video .video-outer {
  @include bp(md) {
    margin-top: 2rem;
  }
}

.home .brand-video iframe {
  box-shadow: 0 0 25px rgba(0,0,0,0.1);
}

.home #workflows .half-stack,
.home #connections .half,
.home #user-experience .half-stack,
.home #documents .half-stack,
.home #productive .half {
  > div {
    width: 100%;
    margin-right: 0;
    margin-bottom: 2rem;
    @include bp(lg) {
      width: calc(50% - 1rem);
      margin-right: 2rem;
      flex: 1;
    }
  }
}

.home #workflows .half-stack,
.home #user-experience .half-stack,
.home #documents .half-stack {
  flex-direction: column;
  @include bp(lg) {
    flex-direction: row-reverse;
  }
}

/*
==============================
DOCUMENT WORKFLOWS
==============================
*/
.home .workflows-content,
.home .connections-content,
.home .ux-content,
.home .documents-content,
.home .productive-content {
  display: flex;
  flex-direction: column;
  @include bp(sm) {
    flex-direction: row;
  }
  > div:first-child {
    flex-shrink: 0;
    display: none;
    @include bp(sm) {
      display: block;
      margin-right: 1rem;
    }
    img {
      margin-bottom: 1rem;
    }
  }
}

.home .workflows-content,
.home .connections-content,
.home .ux-content,
.home .documents-content,
.home .productive-content,
.home .workflows-visual,
.home .connections-visual,
.home .documents-visual,
.home .productive-visual {
  @include bp(sm) {
    margin-bottom: 0;
  }
}

#workflows .half-stack,
#connections .half,
#user-experience .half-stack,
#documents .half-stack,
#productive .half {
  align-items: center;
}

/*
==============================
WORKFLOWS SECTION
==============================
*/
.fat-section div.workflows-content a.btn-arrow {
  box-shadow: inset 0 -200px 0 $brand2;
  @include bp(sm) {
    box-shadow: inset 0 -2px 0 $brand2;
    &:hover, &:focus {
      box-shadow: inset 0 -28px 0 $brand2;
    }
  }
}

.workflows-content > div:first-child svg {
  width: 100%;
  max-width: 75px;
  max-height: 65px;
  fill: $brand2;
}

.workflows-visual .timeline {
  overflow: hidden;
  box-shadow: inset 0 99px $white, inset 0 102px $mgray;
  min-height: 215px;
  display: flex;
  justify-content: center;
  // .workflows-visual .timeline .button
  .button {
    border-radius: 50%;
    position: relative;
    background-color: $white;
    box-shadow: 0 0 25px rgba(black, 0.1);
    border: 3px solid $mgray;
    width: 100px;
    height: 100px;
    transform: translateY(25px);
    display: flex;
    transition: all 500ms $bounce-in;
    margin: 0 0rem;
    top: 25px;
    @include bp(md) {
      top: initial;
      width: 150px;
      height: 150px;
      margin: 0 0.85rem;
    }
    span {
      margin: auto;
    }
    svg {
      width: 100%;
      max-width: 75px;
      max-height: 75px;
      position: relative;
      top: 0;
    }
  }
}

.workflows-visual .build.button {
  transform: translateX(-150%) translateY(25px);
  z-index: 3;
  svg {
    fill: $brand2;
    left: -2px;
  }
}

.workflows-visual .integrate.button {
  transform: translateX(-275%) translateY(25px);
  z-index: 2;
  transition-duration: 600ms;
  svg {
    fill: $brand3;
  }
}

.workflows-visual .publish.button {
  transform: translateX(-390%) translateY(25px);
  transition-duration: 700ms;
  svg {
    fill: $brand;
  }
}

.workflows-visual .build:after,
.workflows-visual .integrate:after,
.workflows-visual .publish:after {
  content: 'Build';
  font-weight: bold;
  position: absolute;
  top: calc(100% + 1rem);
  left: 50%;
  transform: translateX(-50%);
}

.workflows-visual .build:after {
  content: 'Build';
}

.workflows-visual .integrate:after {
  content: 'Integrate';
}

.workflows-visual .publish:after {
  content: 'Publish';
}
/* ... */

